--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
 <!--
-	Sigh, bets from judgement turns into cash
+	World's shortest murder mystery
 	Increase aws capability
-	Get camera access
-	less sound effects when a character is confirmed
+	Generating more anonymous Game IDs
 	Test. Can get more playtesters from:
 		StrangeCharms
 		GMTK
 		Senthuran, his wife, and Chao
-	Bugs
-		iphone camera is frozen
-		You get black frickin squares. Refreshing makes it go away...
-			Some worked, some black as well!
-			PROBABLY only happens when a new player enters, you don't get sent them
-		PROBABLY If your display goes to sleep, the socket goes
-		Facebook web browser full screen
-		This-is-not-an-advert in order to make sounds play
-	World's shortest murder mystery
 	Make a video where you play it
 	
 	
-	Mute button? Eh, just turn off the sound Rowan
 	Could have an automated thing: when you buy a bet, however much extra probability this puts into the suspect, that much is sold, equally, from the other suspects
-	Possibly betting on "who should be put on the pitch" in a football simulator
 	Lobbyist mode
 		With lobbyist mode, you also have a lot of bets more expensive than what the person gets for them. Then, a strategy: if you know someone is trying to manipulate the price of X to be >80p at 1pm, but the true price of X is 20p, you can:
 		-buy a load of bets on X at <80p
@@ -154,7 +142,7 @@
 	
 	<br></br>
 
-	<center><h3><em>Murder, She Bet</em> is a game about putting your money where your <del>mouth</del> probabilistic beliefs are</h3></center>
+	<center><h3><em>Murder, She Bet</em> is a game about making educated guesses and putting your money where your mouth is.</h3></center>
 
 	<br></br>
 
@@ -162,13 +150,14 @@
 	<ol>
 		<li>Players will watch a Murder Mystery, with multiple <em>suspects</em> that may be <em>guilty</em></li>
 		<li>Suspect characters will be added to the board as they appear</li>
-		<li>Bets may be bought and sold all the way up to when the credits roll</li>
+		<li>Bets can be bought AND sold all the way up to when the credits roll</li>
 		<li>Upon the rolling of the credits, the guilt or innocence of suspects will be settled</li>
-		<li>Bets on guilty suspects turn into money, bets on innocent suspects are worthless</li>
+		<li>Bets on suspects who turn out to be guilty will turn into money
+		<li>Bets on suspects who turn out to be innocent are worthless</li>
 	</ol>
 
 	<br></br>
-
+	
 	<center><h3>This is what a game looks like:</h3></center>
 
 	<center><iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
@@ -193,6 +182,16 @@
 		<li>If you think it's less likely than the board does, sell a bet, or if you have none to sell, do nothing</li>
 		<li>Keep doing that! Though don't forget to look up and watch the show sometimes!</li>
 	</ol>
+
+	<!-- can also suggest sharing theories -->
+
+	<br></br>
+	
+	<center><h3>Recommended shows:</h3></center>
+	<center><a href='https://www.youtube.com/watch?v=ozqWHckfWuA&list=ELDjq4Joh7KgQZjOsCkR3L5w&index=8&ab_channel=WhatsNewScooby-Doo%3F'>Scooby Doo</a> (21 minutes),
+	<a href='https://www.youtube.com/watch?v=gEgjkqUk87Y'>Peter Gunn</a> (24 minutes),
+	<a href='https://www.youtube.com/playlist?list=PL8-N29J_E9krdoL8tticMKKTTnCmQTdgi'>Poirot,</a> (50 minutes),
+	<a href='https://www.youtube.com/playlist?list=PLJfhxUKC_TVoOHuKo-HEYPpkzmtHWSA8c'>The Adventures of Sherlock Holmes</a> (50 minutes)</center>
 
 	<br></br>
 
