freeze for transformed bets, variable cash height

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	World's shortest murder mystery
 	Increase aws capability
 	Generating more anonymous Game IDs
+	It is pretty sluggish, maybe do the webgl thing
 	Test. Can get more playtesters from:
 		StrangeCharms
 		GMTK
@@ -202,7 +203,6 @@
 		<script src="/socket.io/socket.io.js"></script>
 		
 		<script src="three.min.js"></script>
-		<script src="instancedMesh.js"></script>
 
 		<script src="variables.js"></script>
 		<script src="miscFunctions.js"></script>
