bug with slot thickness

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		GMTK
 		Senthuran, his wife, and Chao
 	Make a video where you play it
-	
+	probably best not to scale up cash width because think about initial cash
+
+	//need to do camera rotation for camera feed rect
 	
 	Could have an automated thing: when you buy a bet, however much extra probability this puts into the suspect, that much is sold, equally, from the other suspects
 	Lobbyist mode
