--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 	<center><h3>For practice: The World's Shortest Murder Mystery!</h3></center>
 
-	<center><iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0"
+	<center><iframe width="100%" height="56.25%" src="https://www.youtube.com/watch?v=z-VuX2kcaCY" frameborder="0"
 		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 		allowfullscreen="false"></iframe></center>
 
