--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ and putting your money where you'd usually only put your mouth</h3></center>
 				function loop() {
 					let clockDelta = clock.getDelta()
 					frameDelta = clockDelta < .1 ? clockDelta : .1 //clamped because debugger pauses create weirdness
-					log(1./frameDelta)
+					// log(1./frameDelta)
 
 					mouse.updateFromAsync()
 
