various little things

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!--
-	It is pretty sluggish, maybe do the webgl thing, it appears to be gpu limited
-	Make a video where you play it
 	Make the cashbits more noticeable
-	Something weird after buy
-	Outline for cash
+	Organize a game with the folks
+		Record it
+	Bugs
+		Something weird after buy
 	The start button playes a sound and that makes it so you can play sounds
 	probably best not to scale up cash width because think about initial cash
 	Could make it so ctrl+v puts a pasted image in the camera feed
-	"who's connected" thing
 	Fucking rotating the fucking camera feed
 		Might it be that when you turn it sideways it gives you height and width reversed?
 
@@ -337,6 +336,8 @@ and putting your money where you'd usually only put your mouth</h3></center>
 						requestAnimationFrame(loop)
 					}, 1000. / 60.);
 				}
+
+				roundOffRectangleCreation()
 
 				loop()
 			}
