--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ and putting your money where you'd usually only put your mouth</h3></center>
 
 	<br></br>
 
-	<center>Created by <a href='https://twitter.com/hamish_todd'>@hamish_todd</a></center>
-	<center>More information on the game and its philosophy can be found <a href= 'https://github.com/hamishtodd1/msb/blob/main/README.md'>here</a></center>
+	<center>This game is an adaptation by <a href='https://twitter.com/hamish_todd'>@hamish_todd</a> of a design belonging to <a href='http://overcomingbias.com/'>Robin Hanson</a></center>
+	<center>More information on the game and its philosophy can be found <a href= 'https://github.com/hamishtodd1/msb/blob/main/README.md'>here</a>.</center>
 
 	<body>
 		<script src="/socket.io/socket.io.js"></script>
