--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 		Record it
 		Set up blue yeti
 	Bugs
+		FUCKING LOSING MONEY
+		CRASH
 		Something weird after buy?
-		Cash not centered still?
 		Fucking rotating the fucking camera feed
 			Might it be that when you turn it sideways it gives you height and width reversed?
 		LOL you get the cash for bets you paid for when the bets pay out!
+		Judgement mode needs a warning, you can't finish till all is resolved
+	"No room of that name" response
+	"Not enough money" indication
+
 	Could make it so ctrl+v puts a pasted image in the camera feed
 	probably best not to scale up cash width because think about initial cash
 
 	
-	Could have an automated thing: when you buy a bet, however much extra probability this puts into the suspect, that much is sold, equally, from the other suspects
 	Lobbyist mode
 		With lobbyist mode, you also have a lot of bets more expensive than what the person gets for them. Then, a strategy: if you know someone is trying to manipulate the price of X to be >80p at 1pm, but the true price of X is 20p, you can:
 		-buy a load of bets on X at <80p
@@ -36,17 +40,13 @@
 		-how much money they get
 		-how much extra money they start with
 		-When the suspect appears, a 25-second timer starts. If the suspect's bets are trading at 1:1 when it's done, the manipulator gets N dollars.
+
+		Alt
+			Manipulator  will get 1 googol dollars from the market price being above 1
+			So they're willing to lose .9999 = 1 googol dollars
+			To bet, if there are 10 bets
 	Another fun thing would be a bot mode where you see that wealth gets reallocated pretty quickly
 
-	
-
-	Manipulator  will get 1 googol dollars from the market price being above 1
-	So they're willing to lose .9999 = 1 googol dollars
-	To bet, if there are 10 bets
-
-	The game should be about crafting trajectories for objects using whatever
-	Then you can have nice shit in the levels on top of that, rendered with whatever hotness makes sense
-	Maybe it should be completely about making loops, no beginning or end, no worry about controls / seeing the whole thing when it's embedded in an article
 
 
 
@@ -130,6 +130,7 @@ and putting your money where you'd usually only put your mouth</h3></center>
 	<ol>
 		<li>Players will watch a Murder Mystery, with multiple <em>suspects</em> that may be <em>guilty</em></li>
 		<li>Suspect characters will be added to the board as they appear</li>
+		<li>If a suspect is accidentally added twice, their later (rightmost) copy must be deleted</li>
 		<li>Bets can be bought AND sold all the way up to when the credits roll</li>
 		<li><b>When and only when</b> the credits roll, the guilt of suspects will be settled</li>
 		<li>If a suspect is <em>guilty</em> their bets turn into money</li>
