little changes possibly

--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
 <!--
-
-	FAQ video too
-		Making a profit
-		Waiting for the rectangle to expand
-		How you know when a character is guilty
-		Why bets get more expensive
-		To have a "games master" or not?
-		Other shows you can watch
-
-	
 	Bugs
-		CRASH
 		Fucking rotating the fucking camera feed
 			Might it be that when you turn it sideways it gives you height and width reversed?
-		LOL you get the cash for bets you paid for when the bets pay out!
-		Judgement mode needs a warning, you can't finish till all is resolved
-	a little flash when you get a pile of bets paying out
 	Quite awful bug if you... hit the new suspect button twice at the start?
 	"No room of that name" response
-	"Not enough money" indication
+	"Not enough money" indication, little vibration
+	Refund when suspect is deleted? You do know the cashbits' associated players...
+	Portrait submitter gets first bet
 	
 
 	Could make it so ctrl+v puts a pasted image in the camera feed
@@ -59,6 +47,8 @@
 
 
     Send to
+		Some multiplayer youtubers
+		Hacker news
         Testing Groups:
 			EE slack: Pontus, Nicky, Chris Makler
 			Martin Todd, Diana, Lal, mum and dad
