--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!--
-	Bugs
-		Fucking rotating the fucking camera feed
-			Might it be that when you turn it sideways it gives you height and width reversed?
 	Quite awful bug if you... hit the new suspect button twice at the start?
-	"No room of that name" response
-	"Not enough money" indication, little vibration
 	Refund when suspect is deleted? You do know the cashbits' associated players...
+		Well that's more for "unresolved" rather than 
 	Portrait submitter gets first bet
 	
 
