--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 	Quite awful bug if you... hit the new suspect button twice at the start?
 	Refund when suspect is deleted? You do know the cashbits' associated players...
 		Well that's more for "unresolved" rather than 
-	Portrait submitter gets first bet
-	
-
-	Could make it so ctrl+v puts a pasted image in the camera feed
+		Want to incentivize them to sell, and in a certain order, selling is part of the game
+			Maybe ask hanson
+	Could make it so ctrl+v puts a pasted image in the camera feed, useful for desktop
+		Even text could go in, could use drop down window
 	probably best not to scale up cash width because think about initial cash
-
 	
 	Lobbyist mode
 		With lobbyist mode, you also have a lot of bets more expensive than what the person gets for them. Then, a strategy: if you know someone is trying to manipulate the price of X to be >80p at 1pm, but the true price of X is 20p, you can:
@@ -38,9 +37,6 @@
 			So they're willing to lose .9999 = 1 googol dollars
 			To bet, if there are 10 bets
 	Another fun thing would be a bot mode where you see that wealth gets reallocated pretty quickly
-
-
-
 
     Send to
 		Some multiplayer youtubers
