--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!--
 	Quite awful bug if you... hit the new suspect button twice at the start?
 	Refund when suspect is deleted? You do know the cashbits' associated players...
-		Well that's more for "unresolved" rather than 
+		That's more for "unresolved" rather than "resolved in the negative"
 		Want to incentivize them to sell, and in a certain order, selling is part of the game
-			Maybe ask hanson
 	Could make it so ctrl+v puts a pasted image in the camera feed, useful for desktop
 		Even text could go in, could use drop down window
 	probably best not to scale up cash width because think about initial cash
@@ -81,6 +80,7 @@
 			Noahpinion
 			Julia Galef (so you think you're good at whodunnits...)	
 			rob wiblin, katja grace, Carl Shulman whoever that is
+			Tom Auld and Oliver Linton if you want to give a presentation here
  -->
 
 <html>
