aligned arrow and closeable ranking

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ and putting your money where you'd usually only put your mouth</h3></center>
 				//could move this up to get rid of some initial movement
 				initWindowResize()
 
-				initJudgement(gameId)
+				await initJudgement(gameId)
 
 				{
 					const connectionLostBox = Rectangle({
