--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!--
 	Quite awful bug if you... hit the new suspect button twice at the start?
-	Refund when suspect is deleted? You do know the cashbits' associated players...
+	Refund when suspect is deleted?
 		That's more for "unresolved" rather than "resolved in the negative"
 		Want to incentivize them to sell, and in a certain order, selling is part of the game
+		If you were to do this, it would be a case of tracking who still has some cash in there
+		and giving them the most you can give them
 	Could make it so ctrl+v puts a pasted image in the camera feed, useful for desktop
 		Even text could go in, could use drop down window
 	probably best not to scale up cash width because think about initial cash
