fixed ranking bug and added static cash highlight

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!--
-	Quite awful bug if you... hit the new suspect button twice at the start?
+	Google analytics
+	Auto-refresh also puts in the game id
+	Quite awful bug if you... hit the new suspect button twice at the start? On mobile?
 	Refund when suspect is deleted?
 		That's more for "unresolved" rather than "resolved in the negative"
 		Want to incentivize them to sell, and in a certain order, selling is part of the game
@@ -39,50 +41,6 @@
 			To bet, if there are 10 bets
 	Another fun thing would be a bot mode where you see that wealth gets reallocated pretty quickly
 
-    Send to
-		Some multiplayer youtubers
-		Hacker news
-        Testing Groups:
-			EE slack: Pontus, Nicky, Chris Makler
-			Martin Todd, Diana, Lal, mum and dad
-			Chigozie, Devon, Florian and Jacob
-			Eleanor, Stephane, Rachel, Rory and Joel
-			Ivan, Ivan, Nina, Katya
-			Edindies: Norgg, Portponkey
-		Serious folks (need rooms by this point, they'll want to spread it)
-			London rationalish: Jason Sackey, Noah Siegel, Phil Hazelden, Maciej
-			->Then ask them about, facebook rationalists: Vladyslav, Jeffrey Ladish
-			York philosophy: Simon Newey, Seb, Dan, Joe Peach
-			Casey, Jon Blow "colleague of Caplan's".
-			Ben Cerveney, Richard Lemarchand
-			Chao, Senthuran
-		Odds and ends
-			Eric Stansifer
-			Mike Munger
-			Martin Berger
-			Andrew Mathers
-			Other people on those panels on youtube
-			that chinese harvard lady
-		Publicity
-			Nassim Taleb
-			Jessica Hullman who visualizes uncertainty
-			Philip Tetlock
-			Vitalik Buterin
-			Sunil Suri (wrote about futarchy, london based)
-			Lex Friedman
-			wsb, hacker news
-			r/wsb
-			r/ssc
-			r/prediction markets must exist
-			lesswrong
-			SSC open thread
-			Annie Duke
-			Andy should see it
-			Zvi
-			Noahpinion
-			Julia Galef (so you think you're good at whodunnits...)	
-			rob wiblin, katja grace, Carl Shulman whoever that is
-			Tom Auld and Oliver Linton if you want to give a presentation here
  -->
 
 <html>
