social media meta stuff

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!--
+	Streamer mode
+		No ID
+		Only the original player can take pictures
 	Auto-refresh also puts in the game id
 	Going into debt
 	Starting with 0
@@ -46,7 +49,35 @@
 
 <html>
 	<html>
-	<head><meta
+	<head>
+		
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:creator" content="@hamish_todd">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://murdershebet.com">
+	
+	<meta name="title" content="Murder, She Bet" />
+	<meta itemprop="name" content="Murder, She Bet">
+	<meta name="twitter:title" content="Murder, She Bet">
+	<meta property="og:site_name" content="Murder, She Bet">
+	<meta property="og:title" content="Murder, She Bet">
+	
+	<meta itemprop="description"
+		content="A game about putting your money where you'd usually put your mouth">
+	<meta name="description"
+		content="A game about putting your money where you'd usually put your mouth" />
+	<meta name="twitter:description"
+		content="A game about putting your money where you'd usually put your mouth" />
+	<meta property="og:description"
+		content="A game about putting your money where you'd usually put your mouth" />
+	
+	<meta property="og:image" content="https://murdershebet.com/screenshot.jpg" />
+	<meta name="twitter:image" content="https://murdershebet.com/screenshot.jpg" />
+	<meta itemprop="image" content="https://murdershebet.com/screenshot.jpg">
+		
+		
+		
+	<meta
 		charset="utf-8"><meta
 		name="viewport" content="width=device-width, initial-scale=1">
 
@@ -113,7 +144,7 @@ and putting your money where you'd usually only put your mouth</h3></center>
 		<h3>Rule clarifications and FAQ (optional!)</h3>
 	</center>
 	<center>
-		<iframe width="100%" height="51.1%" src="https://www.youtube.com/embed/4YoF3TZk7C4" frameborder="0"
+		<iframe width="100%" height="51.1%" src="https://www.youtube.com/embed/8IHBtfEX8iU" frameborder="0"
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 			allowfullscreen="false"></iframe>
 	</center>
