slight tweak to meta

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 	<meta property="og:title" content="Murder, She Bet">
 	
 	<meta itemprop="description"
-		content="A game about putting your money where you'd usually put your mouth">
+		content="A game about putting your (play) money where you'd usually put your mouth">
 	<meta name="description"
-		content="A game about putting your money where you'd usually put your mouth" />
+		content="A game about putting your (play) money where you'd usually put your mouth" />
 	<meta name="twitter:description"
-		content="A game about putting your money where you'd usually put your mouth" />
+		content="A game about putting your (play) money where you'd usually put your mouth" />
 	<meta property="og:description"
-		content="A game about putting your money where you'd usually put your mouth" />
+		content="A game about putting your (play) money where you'd usually put your mouth" />
 	
 	<meta property="og:image" content="https://murdershebet.com/screenshot.jpg" />
 	<meta name="twitter:image" content="https://murdershebet.com/screenshot.jpg" />
@@ -105,7 +105,7 @@
 	<br></br>
 
 	<center><h3>A game about educated guesses<br>
-and putting your money where you'd usually only put your mouth</h3></center>
+and putting your (play) money where you'd usually only put your mouth</h3></center>
 
 	<br></br>
 	
@@ -115,9 +115,9 @@ and putting your money where you'd usually only put your mouth</h3></center>
 	<ol>
 		<li>Players will watch a Murder Mystery, with multiple <em>suspects</em> that may be <em>guilty</em></li>
 		<li>Suspect characters will be added to the board as they appear</li>
-		<li>Players may buy and sell bets on suspects until the credits roll</li>
-		<li>If a suspect turns out to be <em>guilty</em> their bets turn into money</li>
-		<li>If not guilty, that suspect's bets are worthless</li>
+		<li>Players may buy and sell <em>bets</em> on the suspects until the credits roll</li>
+		<li>When the credits roll, if a suspect is guilty their bets turn into money</li>
+		<li>The players aim is to have as much money as possible at the end</li>
 	</ol>
 	
 	<br></br>
@@ -151,7 +151,7 @@ and putting your money where you'd usually only put your mouth</h3></center>
 	
 	<br></br>
 	
-	<center><a href='https://www.reddit.com/r/MurderSheBet/'>Subreddit</a>, <a href='https://discord.gg/pBvKrNFwbh'>Discord</a></center>
+	<center><a href='https://www.reddit.com/r/MurderSheBet/'>Subreddit</a>, <a href='https://discord.gg/pBvKrNFwbh'>Discord</a>, <a href='https://github.com/hamishtodd1/msb/'>Github</a></center>
 	<center>This game is an adaptation by <a href='https://twitter.com/hamish_todd'>@hamish_todd</a> of a design/discovery by <a href='http://overcomingbias.com/'>Robin Hanson</a></center>
 	<center>More information on the game and its philosophy can be found <a href= 'https://github.com/hamishtodd1/msb/blob/main/README.md'>here</a>.</center>
 
